--- a/source/components/base/input.astro
+++ b/source/components/base/input.astro
@@ -14,7 +14,7 @@ const { multiline, class: clazz, slot, ...props } = Astro.props;
 <Tag
   autocomplete="off"
   class={cn(
-    "rounded-theme border border-input bg-background px-4 py-2 text-foreground placeholder:text-muted-foreground",
+    "rounded-lg border border-input bg-background px-4 py-2 text-foreground placeholder:text-muted-foreground",
     clazz,
   )}
   {...props}
