--- a/source/sections/contact.astro
+++ b/source/sections/contact.astro
@@ -54,7 +54,7 @@ const t = translations.sections.contact;
     <button
       type="submit"
       value="Send"
-      class="col-span-2 cursor-pointer rounded-theme bg-primary px-4 py-2 text-primary-foreground"
+      class="col-span-2 cursor-pointer rounded-lg bg-primary px-4 py-2 text-primary-foreground"
     >
       Send
     </button>
