--- a/source/components/base/card.astro
+++ b/source/components/base/card.astro
@@ -8,7 +8,7 @@ const { as: Tag = "div", class: clazz, ...props } = Astro.props;
 
 <Tag
   class={cn(
-    "flex flex-col justify-center rounded-theme border border-border bg-card p-4",
+    "flex flex-col justify-center rounded-lg border border-border bg-card p-4",
     clazz,
   )}
   {...props}
