--- a/source/components/user-location.astro
+++ b/source/components/user-location.astro
@@ -80,7 +80,9 @@ const t = translations.userLocation;
     {t.notice.title}
   </span>
 
-  <p class="whitespace-pre-line text-pretty text-sm font-medium">
+  <p
+    class="whitespace-pre-line text-pretty text-sm font-medium text-popover-foreground/85"
+  >
     {t.notice.message}
   </p>
 </div>
