--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -1,6 +1,7 @@
 ---
 import Base from "@app/layouts/base.astro";
 import Header from "@app/layouts/header.astro";
+import Footer from "@app/layouts/footer.astro";
 
 import ScrollToTop from "@app/components/scroll-to-top.astro";
 import SocialsSidelist from "@app/components/social-sidelist.astro";
@@ -21,5 +22,7 @@ import SocialsSidelist from "@app/components/social-sidelist.astro";
     </main>
 
     <ScrollToTop class="fixed bottom-0 right-0 m-12" />
+
+    <Footer />
   </Fragment>
 </Base>
