--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -37,7 +37,7 @@ import "tippy.js/dist/tippy.css";
   </head>
 
   <body
-    class="debug-screens relative bg-background font-sans text-foreground antialiased"
+    class="debug-screens relative overflow-x-hidden bg-background font-sans text-foreground antialiased"
   >
     <slot name="body" />
   </body>
@@ -45,8 +45,6 @@ import "tippy.js/dist/tippy.css";
 
 <style is:global>
   :root {
-    --header-height: 96px;
-
     --scrollbar-color-track: transparent;
     --scrollbar-color-thumb: theme("colors.muted.DEFAULT");
     --scrollbar-color-thumb-active: theme("colors.muted.foreground");
@@ -89,19 +87,19 @@ import "tippy.js/dist/tippy.css";
   }
 
   @supports selector(::-webkit-scrollbar) {
-    ::-webkit-scrollbar {
-      width: var(--scrollbar-width-legacy);
+    html::-webkit-scrollbar {
+      width: var(--scrollbar-width-legacy, 0);
     }
 
-    ::-webkit-scrollbar-button {
+    html::-webkit-scrollbar-button {
       display: none;
     }
 
-    ::-webkit-scrollbar-track {
+    html::-webkit-scrollbar-track {
       background-color: var(--scrollbar-color-track);
     }
 
-    ::-webkit-scrollbar-thumb {
+    html::-webkit-scrollbar-thumb {
       background-color: var(--scrollbar-color-thumb);
 
       border-block: 2px solid transparent;
@@ -109,7 +107,7 @@ import "tippy.js/dist/tippy.css";
       background-clip: content-box;
     }
 
-    ::-webkit-scrollbar-thumb:hover {
+    html::-webkit-scrollbar-thumb:hover {
       background-color: var(--scrollbar-color-thumb-hover);
 
       border-block: 2px solid transparent;
@@ -117,7 +115,7 @@ import "tippy.js/dist/tippy.css";
       background-clip: content-box;
     }
 
-    ::-webkit-scrollbar-thumb:active {
+    html::-webkit-scrollbar-thumb:active {
       background-color: var(--scrollbar-color-thumb-active);
 
       border-block: 2px solid transparent;
