--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -103,7 +103,7 @@ const t = translations.sections;
 
   <hr
     id="header-separator"
-    class="opacity-1 relative top-[calc(var(--top-header)-1px)] lg:-top-px"
+    class="relative top-[calc(var(--top-header)-1px)] opacity-0 lg:-top-px"
   />
 </header>
 
@@ -155,7 +155,7 @@ const t = translations.sections;
   }
 </style>
 
-<!-- <style>
+<style>
   hr#header-separator {
     animation: fade-in linear both;
     animation-timeline: scroll(root);
@@ -168,4 +168,3 @@ const t = translations.sections;
     }
   }
 </style>
- -->
