--- a/source/modules/navigation/components/nav-links.astro
+++ b/source/modules/navigation/components/nav-links.astro
@@ -3,7 +3,7 @@ import { getTranslations } from "@app/modules/i18n/lib/translations";
 import type { HTMLAttributes } from "astro/types";
 
 import Link from "@app/components/base/link.astro";
-import { cn } from "@app/utils/style";
+import { cn } from "@app/lib/helpers/style";
 import { sections } from "../lib/sections";
 
 export type Props = HTMLAttributes<"ul">;
