--- a/source/components/base/card.astro
+++ b/source/components/base/card.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/utils/style";
+import { cn } from "@app/lib/helpers/style";
 import type { Polymorphic } from "astro/types";
 
 type Props<Tag extends "div" | "article"> = Polymorphic<{ as: Tag }>;
