--- a/source/components/scroll-to-top.astro
+++ b/source/components/scroll-to-top.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/utils/style";
+import { cn } from "@app/lib/helpers/style";
 import { Icon } from "astro-icon/components";
 import type { HTMLAttributes } from "astro/types";
 
