--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -1,5 +1,5 @@
 ---
-import "@app/assets/styles/index.css";
+import "@app/styles/index.css";
 import "tippy.js/animations/scale.css";
 import "tippy.js/dist/tippy.css";
 ---
@@ -31,7 +31,7 @@ import "tippy.js/dist/tippy.css";
       async
       defer
     ></script>
-    <script src="@app/polyfills.ts"></script>
+    <script src="@app/lib/polyfills.ts"></script>
 
     <slot name="head" />
   </head>
@@ -42,92 +42,3 @@ import "tippy.js/dist/tippy.css";
     <slot name="body" />
   </body>
 </html>
-
-<style is:global>
-  :root {
-    --scrollbar-color-track: transparent;
-    --scrollbar-color-thumb: theme("colors.muted.DEFAULT");
-    --scrollbar-color-thumb-active: theme("colors.muted.foreground");
-    --scrollbar-color-thumb-hover: color-mix(
-      in hsl,
-      var(--scrollbar-color-thumb),
-      var(--scrollbar-color-thumb-active) 50%
-    );
-
-    --scrollbar-width: thin;
-    --scrollbar-width-legacy: 8px;
-    --scrollbar-thumb-radius: theme("borderRadius.full");
-  }
-
-  * {
-    -webkit-tap-highlight-color: transparent;
-    box-sizing: border-box;
-  }
-
-  html {
-    width: 100%;
-    height: 100%;
-
-    /** If supported this will be applied. */
-    height: 100dvh;
-
-    scrollbar-gutter: stable;
-    scroll-behavior: smooth;
-  }
-
-  body {
-    width: 100%;
-
-    min-height: 100%;
-    min-height: 100dvh;
-  }
-
-  textarea {
-    resize: none;
-  }
-
-  @supports selector(::-webkit-scrollbar) {
-    html::-webkit-scrollbar {
-      width: var(--scrollbar-width-legacy, 0);
-    }
-
-    html::-webkit-scrollbar-button {
-      display: none;
-    }
-
-    html::-webkit-scrollbar-track {
-      background-color: var(--scrollbar-color-track);
-    }
-
-    html::-webkit-scrollbar-thumb {
-      background-color: var(--scrollbar-color-thumb);
-
-      border-block: 2px solid transparent;
-      border-radius: var(--scrollbar-thumb-radius);
-      background-clip: content-box;
-    }
-
-    html::-webkit-scrollbar-thumb:hover {
-      background-color: var(--scrollbar-color-thumb-hover);
-
-      border-block: 2px solid transparent;
-      border-radius: var(--scrollbar-thumb-radius);
-      background-clip: content-box;
-    }
-
-    html::-webkit-scrollbar-thumb:active {
-      background-color: var(--scrollbar-color-thumb-active);
-
-      border-block: 2px solid transparent;
-      border-radius: var(--scrollbar-thumb-radius);
-      background-clip: content-box;
-    }
-  }
-
-  @supports not selector(::-webkit-scrollbar) {
-    html {
-      scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
-      scrollbar-width: var(--scrollbar-width);
-    }
-  }
-</style>
