refactor: svelte components to avoid class overriding from outside

--- a/source/components/sections/experience.astro
+++ b/source/components/sections/experience.astro
@@ -52,7 +52,7 @@ const end = formatter.format(endDate);
 
   <Timeline
     itemCount={2}
-    client:load
+    client:idle
   >
     <TimelineEntry index={1}>
       <article class="group relative flex max-w-screen-lg flex-col p-4">
