refactor: move data folder from assets to lib

--- a/source/components/sections/skills.astro
+++ b/source/components/sections/skills.astro
@@ -1,5 +1,5 @@
 ---
-import { skills } from "@app/assets/data/skills";
+import { skills } from "@app/lib/data/skills";
 import SkillCard from "@app/components/skill-card.astro";
 import { getTranslations } from "@app/modules/i18n/lib/translations";
 import { Example } from "@app/modules/three-fiber/components/example";
