--- a/source/components/skill-badge.astro
+++ b/source/components/skill-badge.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import { skills } from "@app/assets/data/skills";
+import { skills } from "@app/lib/data/skills";
 import Badge, { type BadgeProps } from "./base/badge.astro";
 
 export type Props = BadgeProps & {
