--- a/source/components/skill-card.astro
+++ b/source/components/skill-card.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 
-import type { Category } from "@app/assets/data/skills";
+import type { Category } from "@app/lib/data/skills";
 import Card from "@app/components/base/card.astro";
 
 export type Props = {
