--- a/source/components/social-sidelist.astro
+++ b/source/components/social-sidelist.astro
@@ -1,6 +1,6 @@
 ---
 import Link from "@app/components/base/link.astro";
-import { socials } from "@app/assets/data/socials";
+import { socials } from "@app/lib/data/socials";
 
 import { getTranslations } from "@app/modules/i18n/lib/translations";
 import { Icon } from "astro-icon/components";
