feat: experience section prototype

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -49,7 +49,7 @@ const optionalAttrs = {
           name="lucide:arrow-up-right"
           class:list={[
             "relative bottom-[2px] right-px inline-block  transition-transform duration-300 will-change-transform",
-            "group-hover:-translate-y-1 group-hover:translate-x-1 ",
+            "lg:group-hover:-translate-y-1 lg:group-hover:translate-x-1 ",
             "group-focus-visible:-translate-y-1 group-focus-visible:translate-x-1",
           ]}
         />
