--- a/source/components/sections/about.astro
+++ b/source/components/sections/about.astro
@@ -38,7 +38,7 @@ const t = translations.sections.about;
         </span>
 
         <span
-          class="block text-[2.5rem] font-extrabold tracking-wide text-primary xs:text-[3.5rem] lg:text-[7rem]"
+          class="block bg-gradient-to-tr from-azure-700 to-azure-400 bg-clip-text text-[2.5rem] font-extrabold tracking-wide text-transparent xs:text-[3.5rem] lg:text-[7rem]"
         >
           Ivan Porto
         </span>
