--- a/source/components/skill-card.astro
+++ b/source/components/skill-card.astro
@@ -1,13 +1,13 @@
 ---
 import { Icon } from "astro-icon/components";
 
-import type { Category } from "@app/lib/data/skills";
+import type { SkillCategory } from "@app/lib/data/skills";
 import Card from "@app/components/base/card.astro";
 
 export type Props = {
   name: string;
   icon: string;
-  categories: Category[];
+  categories: SkillCategory[];
 
   variant?: "default" | "compact";
 };
